--- a/index.html
+++ b/index.html
@@ -2169,13 +2169,12 @@
   {"tense1": "Prise Courant", "tense2": "مَقْبَسٌ كَهْرَبَائِيٌّ / مَقَابِسُ كَهْرَبَائِيَّةٌ / مَقْبَسَانِ كَهْرَبَائِيَّانِ / مَقَابِسَ كَهْرَبَائِيَّةً / مَقْبَسَيْنِ كَهْرَبَائِيَّيْنِ", "type": "word"},
     {"tense1": "Port USB", "tense2": "مَنْفَذُ يُو إِسْ بِي / مَنَافِذُ يُو إِسْ بِي / مَنْفَذَانِ يُو إِسْ بِي / مَنَافِذَ يُو إِسْ بِي / مَنْفَذَيْنِ يُو إِسْ بِي", "type": "word"},
     {"tense1": "Populaire", "tense2": "شَعْبِيٌّ / شَعْبِيُّونَ / شَعْبِيَّانِ / شَعْبِيِّينَ / شَعْبِيَّيْنِ", "type": "word"},
-    {"tense1": "Conseiller", "tense2": "مُسْتَشَارٌ / مُسْتَشَارُونَ / مُسْتَشَارَانِ / مُسْتَشَارِينَ / مُسْتَشَارَيْنِ", "type": "word"},
+    {"tense1": "Un conseiller", "tense2": "مُسْتَشَارٌ / مُسْتَشَارُونَ / مُسْتَشَارَانِ / مُسْتَشَارِينَ / مُسْتَشَارَيْنِ", "type": "word"},
     {"tense1": "mars", "tense2": "مِرِّيخٌ / مِرِّيخَاتٌ / مِرِّيخَانِ / مِرِّيخَاتٍ / مِرِّيخَيْنِ", "type": "word"},
     {"tense1": "ministre", "tense2": "وَزِيرٌ / وُزَرَاءُ / وَزِيرَانِ / وُزَرَاءَ / وَزِيرَيْنِ", "type": "word"},
     {"tense1": "contradictoire", "tense2": "مُتَضَارِبٌ / مُتَضَارِبُونَ / مُتَضَارِبَانِ / مُتَضَارِبِينَ / مُتَضَارِبَيْنِ", "type": "word"},
     {"tense1": "inciter", "tense2": "حَرَّضَ / يُحَرِّضُ / تَحْرِيضٌ / حَرِّضْ / يُحَرَّضُ / حُرِّضَ", "type": "verb"},
     {"tense1": "provoquer", "tense2": "اِسْتَفَزَّ / يَسْتَفِزُّ / اِسْتِفْزَازٌ / اِسْتَفِزَّ / يُسْتَفَزُّ / اُسْتُفِزَّ", "type": "verb"},
-    {"tense1": "céder", "tense2": "تَنَازَلَ / يَتَنَازَلُ / تَنَازُلٌ / تَنَازَلْ / يُتَنَازَلُ / تُنُوزِلَ", "type": "verb"},
     {"tense1": "attribuer", "tense2": "عَزَا / يَعْزُو / عَزْوٌ / اِعْزُ / يُعْزَى / عُزِيَ", "type": "verb"},
     {"tense1": "exprimer", "tense2": "عَبَّرَ / يُعَبِّرُ / تَعْبِيرٌ / عَبِّرْ / يُعَبَّرُ / عُبِّرَ", "type": "verb"},
     {"tense1": "harmonie", "tense2": "اِنْسِجَامٌ / اِنْسِجَامَاتٌ / اِنْسِجَامَانِ / اِنْسِجَامَاتٍ / اِنْسِجَامَيْنِ", "type": "word"},
