new arabic words

--- a/index.html
+++ b/index.html
@@ -2181,7 +2181,24 @@
     {"tense1": "Compter sur", "tense2": "عَوَّلَ / يُعَوِّلُ / تَعْوِيلٌ / عَوِّلْ / يُعَوَّلُ / عُوِّلَ", "type": "verb"},
     {"tense1": "bêtises", "tense2": "عَبَثٌ / أَعْبَاثٌ / عَبَثَانِ / أَعْبَاثًا / عَبَثَيْنِ", "type": "word"},
     {"tense1": "conséquence", "tense2": "تَبِعَةٌ / تَبِعَاتٌ / تَبِعَتَانِ / تَبِعَاتٍ / تَبِعَتَيْنِ", "type": "word"},
-    {"tense1": "conséquence", "tense2": "تَدَاعٍ / تَدَاعِيَاتٌ / تَدَاعِيَانِ / تَدَاعِيَاتٍ / تَدَاعِيَيْنِ", "type": "word"}
+    {"tense1": "conséquence", "tense2": "تَدَاعٍ / تَدَاعِيَاتٌ / تَدَاعِيَانِ / تَدَاعِيَاتٍ / تَدَاعِيَيْنِ", "type": "word"},
+    {"tense1": "règlement", "tense2": "لائِحَة / لَوائِح / لائِحَتان / لَوائِحَ / لائِحَتَيْن", "type": "word"},
+  {"tense1": "addiction", "tense2": "إِدْمان / إِدْمانات / إِدْمانان / إِدْماناتٍ / إِدْمانَيْن", "type": "word"},
+  {"tense1": "aléatoire", "tense2": "عَشْوائِيّ / عَشْوائِيّون / عَشْوائِيّان / عَشْوائِيِّينَ / عَشْوائِيَّيْن", "type": "word"},
+  {"tense1": "gradin", "tense2": "مُدَرَّج / مُدَرَّجات / مُدَرَّجان / مُدَرَّجاتٍ / مُدَرَّجَيْن", "type": "word"},
+  {"tense1": "distraire", "tense2": "شَتَّتَ / يُشَتِّتُ / تَشْتِيت / شَتِّتْ / يُشَتَّتُ / شُتِّتَ", "type": "verb"},
+  {"tense1": "gloire", "tense2": "مَجْد / أَمْجاد / مَجْدان / أَمْجادٍ / مَجْدَيْن", "type": "word"},
+  {"tense1": "flotte / troupe", "tense2": "أُسْطول / أَساطِيل / أُسْطولان / أَساطِيلَ / أُسْطولَيْن", "type": "word"},
+  {"tense1": "rattraper", "tense2": "لَحِقَ / يَلْحَقُ / لَحاق / اِلْحَقْ / يُلْحَقُ / لُحِقَ", "type": "verb"},
+  {"tense1": "gang", "tense2": "عِصابَة / عِصابات / عِصابَتان / عِصاباتٍ / عِصابَتَيْن", "type": "word"},
+  {"tense1": "littéralement", "tense2": "حَرْفِيّاً / حَرْفِيّاتٍ / حَرْفِيّان / حَرْفِيّاتٍ / حَرْفِيَّيْن", "type": "word"},
+  {"tense1": "retourner", "tense2": "قَلَبَ / يَقْلِبُ / قَلْب / اِقْلِبْ / يُقْلَبُ / قُلِبَ", "type": "verb"},
+  {"tense1": "excessif", "tense2": "مُفْرِط / مُفْرِطون / مُفْرِطان / مُفْرِطِينَ / مُفْرِطَيْن", "type": "word"},
+  {"tense1": "arrogant", "tense2": "مَغْرور / مَغْرورون / مَغْروران / مَغْرورِينَ / مَغْرورَيْن", "type": "word"},
+  {"tense1": "conserver", "tense2": "وَفَّرَ / يُوَفِّرُ / تَوْفِير / وَفِّرْ / يُوَفَّرُ / وُفِّرَ", "type": "verb"},
+  {"tense1": "se suicider", "tense2": "اِنْتَحَرَ / يَنْتَحِرُ / اِنْتِحار / اِنْتَحِرْ / يُنْتَحَرُ / اُنْتُحِرَ", "type": "verb"},
+  {"tense1": "perdre", "tense2": "خَسِرَ / يَخْسَرُ / خَسارَة / اِخْسَرْ / يُخْسَرُ / خُسِرَ", "type": "verb"},
+  {"tense1": "bloquer/intercepter", "tense2": "حَجَبَ / يَحْجُبُ / حَجْب / اِحْجُبْ / يُحْجَبُ / حُجِبَ", "type": "verb"}
 ]
         };
 
