new arabic words

--- a/index.html
+++ b/index.html
@@ -1959,7 +1959,7 @@
   {"tense1": "paille", "tense2": "قَشّ/قُشُوش/قَشَّانِ/قُشُوشًا/قَشَّيْنِ", "type": "word"},
   {"tense1": "inscription", "tense2": "نَقْش/نُقُوش/نَقْشَانِ/نُقُوشًا/نَقْشَيْنِ", "type": "word"},
   {"tense1": "descendant", "tense2": "حَفِيد/أَحْفَاد/حَفِيدَانِ/أَحْفَادًا/حَفِيدَيْنِ", "type": "word"},
-  {"tense1": "récolte", "tense2": "مَحْصُول/مَحْصُولَات/مَحْصُولَانِ/مَحْصُولَاتٍ/مَحْصُولَيْنِ", "type": "word"},
+  {"tense1": "récolte", "tense2": "مَحْصُول/مَحْصُولَات مَحَاصِيل/مَحْصُولَانِ/مَحْصُولَاتٍ/مَحْصُولَيْنِ", "type": "word"},
   {"tense1": "lutte", "tense2": "صِرَاع/صِرَاعَات/صِرَاعَانِ/صِرَاعَاتٍ/صِرَاعَيْنِ", "type": "word"},
   {"tense1": "restaurer", "tense2": "رَمَّمَ/يُرَمِّمُ/تَرْمِيم/رَمِّمْ/يُرَمَّمُ/رُمِّمَ", "type": "verb"},
   {"tense1": "débris", "tense2": "حُطَام", "type": "word"},
@@ -2198,7 +2198,24 @@
   {"tense1": "conserver", "tense2": "وَفَّرَ / يُوَفِّرُ / تَوْفِير / وَفِّرْ / يُوَفَّرُ / وُفِّرَ", "type": "verb"},
   {"tense1": "se suicider", "tense2": "اِنْتَحَرَ / يَنْتَحِرُ / اِنْتِحار / اِنْتَحِرْ / يُنْتَحَرُ / اُنْتُحِرَ", "type": "verb"},
   {"tense1": "perdre", "tense2": "خَسِرَ / يَخْسَرُ / خَسارَة / اِخْسَرْ / يُخْسَرُ / خُسِرَ", "type": "verb"},
-  {"tense1": "bloquer/intercepter", "tense2": "حَجَبَ / يَحْجُبُ / حَجْب / اِحْجُبْ / يُحْجَبُ / حُجِبَ", "type": "verb"}
+  {"tense1": "bloquer/intercepter", "tense2": "حَجَبَ / يَحْجُبُ / حَجْب / اِحْجُبْ / يُحْجَبُ / حُجِبَ", "type": "verb"},
+  {"tense1": "Satellite", "tense2": "قَمَرٌ صِنَاعِيٌّ / أَقْمَارٌ صِنَاعِيَّةٌ / قَمَرَانِ صِنَاعِيَّانِ / أَقْمَارًا صِنَاعِيَّةً / قَمَرَيْنِ صِنَاعِيَّيْنِ", "type": "word"},
+  {"tense1": "chargement", "tense2": "شَحْنٌ / شَحَنَاتٌ / شَحْنَانِ / شَحَنَاتٍ / شَحْنَيْنِ", "type": "word"},
+  {"tense1": "Voie/axe", "tense2": "مَسَارٌ / مَسَارَاتٌ / مَسَارَانِ / مَسَارَاتٍ / مَسَارَيْنِ", "type": "word"},
+  {"tense1": "embassadeur", "tense2": "سَفِيرٌ / سُفَرَاءُ / سَفِيرَانِ / سُفَرَاءَ / سَفِيرَيْنِ", "type": "word"},
+  {"tense1": "nucléaire", "tense2": "نَوَوِيٌّ / نَوَوِيُّونَ / نَوَوِيَّانِ / نَوَوِيِّينَ / نَوَوِيَّيْنِ", "type": "word"},
+  {"tense1": "résumer", "tense2": "لَخَّصَ / يُلَخِّصُ / تَلْخِيصٌ / لَخِّصْ / يُلَخَّصُ / لُخِّصَ", "type": "verb"},
+  {"tense1": "Confirmer", "tense2": "أَيَّدَ / يُؤَيِّدُ / تَأْيِيدٌ / أَيِّدْ / يُؤَيَّدُ / أُيِّدَ", "type": "verb"},
+  {"tense1": "prison", "tense2": "سِجْنٌ / سُجُونٌ / سِجْنَانِ / سُجُونًا / سِجْنَيْنِ", "type": "word"},
+  {"tense1": "publication/post", "tense2": "تَدْوِينَةٌ / تَدْوِينَاتٌ / تَدْوِينَتَانِ / تَدْوِينَاتٍ / تَدْوِينَتَيْنِ", "type": "word"},
+  {"tense1": "exprimer", "tense2": "أَعْرَبَ / يُعْرِبُ / إِعْرَابٌ / أَعْرِبْ / يُعْرَبُ / أُعْرِبَ", "type": "verb"},
+  {"tense1": "Un devoir", "tense2": "وَاجِبٌ / وَاجِبَاتٌ / وَاجِبَانِ / وَاجِبَاتٍ / وَاجِبَيْنِ", "type": "word"},
+  {"tense1": "Autonome", "tense2": "ذَاتِيٌّ / ذَاتِيُّونَ / ذَاتِيَّانِ / ذَاتِيِّينَ / ذَاتِيَّيْنِ", "type": "word"},
+  {"tense1": "nombre", "tense2": "عَدَدٌ / أَعْدَادٌ / عَدَدَانِ / أَعْدَادًا / عَدَدَيْنِ", "type": "word"},
+  {"tense1": "hausse", "tense2": "غَلَاءٌ / أَغْلِيَةٌ / غَلَاءَانِ / أَغْلِيَةً / غَلَاءَيْنِ", "type": "word"},
+  {"tense1": "abattre", "tense2": "ذَبَحَ / يَذْبَحُ / ذَبْحٌ / اذْبَحْ / يُذْبَحُ / ذُبِحَ", "type": "verb"},
+  {"tense1": "survivant", "tense2": "نَاجٍ / نَاجُونَ / نَاجِيَانِ / نَاجِينَ / نَاجِيَيْنِ", "type": "word"},
+  {"tense1": "Narrer", "tense2": "رَوَى / يَرْوِي / رِوَايَةٌ / ارْوِ / يُرْوَى / رُوِيَ", "type": "verb"}
 ]
         };
 
