new arabic words

--- a/index.html
+++ b/index.html
@@ -2215,7 +2215,24 @@
   {"tense1": "hausse", "tense2": "غَلَاءٌ / أَغْلِيَةٌ / غَلَاءَانِ / أَغْلِيَةً / غَلَاءَيْنِ", "type": "word"},
   {"tense1": "abattre", "tense2": "ذَبَحَ / يَذْبَحُ / ذَبْحٌ / اذْبَحْ / يُذْبَحُ / ذُبِحَ", "type": "verb"},
   {"tense1": "survivant", "tense2": "نَاجٍ / نَاجُونَ / نَاجِيَانِ / نَاجِينَ / نَاجِيَيْنِ", "type": "word"},
-  {"tense1": "Narrer", "tense2": "رَوَى / يَرْوِي / رِوَايَةٌ / ارْوِ / يُرْوَى / رُوِيَ", "type": "verb"}
+  {"tense1": "Narrer", "tense2": "رَوَى / يَرْوِي / رِوَايَةٌ / ارْوِ / يُرْوَى / رُوِيَ", "type": "verb"},
+  {"tense1": "Polémique", "tense2": "سِجَال / سِجَالات / سِجَالان / سِجَالاتٍ / سِجَالَيْن", "type": "word"},
+  {"tense1": "Se qualifier", "tense2": "تَأَهَّلَ / يَتَأَهَّلُ / تَأَهُّل / تَأَهَّلْ / يُتَأَهَّلُ / تُؤُهِّلَ", "type": "verb"},
+  {"tense1": "poursuivre", "tense2": "لاحَقَ / يُلاحِقُ / مُلاحَقَة / لاحِقْ / يُلاحَقُ / لوحِقَ", "type": "verb"},
+  {"tense1": "briser", "tense2": "حَطَّمَ / يُحَطِّمُ / تَحْطِيم / حَطِّمْ / يُحَطَّمُ / حُطِّمَ", "type": "verb"},
+  {"tense1": "Enquête", "tense2": "تَحْقِيق / تَحْقِيقات / تَحْقِيقان / تَحْقِيقاتٍ / تَحْقِيقَيْن", "type": "word"},
+  {"tense1": "Glisser", "tense2": "انْسَابَ / يَنْسَابُ / انْسِيَاب / انْسَبْ / يُنْسَابُ / انْسِيبَ", "type": "verb"},
+  {"tense1": "Greve", "tense2": "إِضْرَاب / إِضْرَابات / إِضْرَابان / إِضْرَاباتٍ / إِضْرَابَيْن", "type": "word"},
+  {"tense1": "distraire", "tense2": "شَتَّتَ / يُشَتِّتُ / تَشْتِيت / شَتِّتْ / يُشَتَّتُ / شُتِّتَ", "type": "verb"},
+  {"tense1": "Avoisiner", "tense2": "نَاهَزَ / يُنَاهِزُ / مُنَاهَزَة / نَاهِزْ / يُنَاهَزُ / نُوهِزَ", "type": "verb"},
+  {"tense1": "visa", "tense2": "تَأْشِيرَة / تَأْشِيرات / تَأْشِيرَتان / تَأْشِيراتٍ / تَأْشِيرَتَيْن", "type": "word"},
+  {"tense1": "guider/piloter", "tense2": "وَجَّهَ / يُوَجِّهُ / تَوْجِيه / وَجِّهْ / يُوَجَّهُ / وُجِّهَ", "type": "verb"},
+  {"tense1": "prostitution", "tense2": "دِعَارَة / دِعَارات / دِعَارَتان / دِعَاراتٍ / دِعَارَتَيْن", "type": "word"},
+  {"tense1": "Exclure", "tense2": "أَقْصَى / يُقْصِي / إِقْصَاء / أَقْصِ / يُقْصَى / أُقْصِيَ", "type": "verb"},
+  {"tense1": "grave", "tense2": "وَخِيم / وَخِيمَة / وَخِيمان / وَخِيماتٍ / وَخِيمَيْن", "type": "word"},
+  {"tense1": "financer", "tense2": "مَوَّلَ / يُمَوِّلُ / تَمْوِيل / مَوِّلْ / يُمَوَّلُ / مُوِّلَ", "type": "verb"},
+  {"tense1": "Distribuer", "tense2": "وَزَّعَ / يُوَزِّعُ / تَوْزِيع / وَزِّعْ / يُوَزَّعُ / وُزِّعَ", "type": "verb"},
+  {"tense1": "polémique", "tense2": "ضَجَّة / ضَجَّات / ضَجَّتان / ضَجَّاتٍ / ضَجَّتَيْن", "type": "word"}
 ]
         };
 
