new arabic words

--- a/index.html
+++ b/index.html
@@ -2232,7 +2232,24 @@
   {"tense1": "grave", "tense2": "وَخِيم / وَخِيمَة / وَخِيمان / وَخِيماتٍ / وَخِيمَيْن", "type": "word"},
   {"tense1": "financer", "tense2": "مَوَّلَ / يُمَوِّلُ / تَمْوِيل / مَوِّلْ / يُمَوَّلُ / مُوِّلَ", "type": "verb"},
   {"tense1": "Distribuer", "tense2": "وَزَّعَ / يُوَزِّعُ / تَوْزِيع / وَزِّعْ / يُوَزَّعُ / وُزِّعَ", "type": "verb"},
-  {"tense1": "polémique", "tense2": "ضَجَّة / ضَجَّات / ضَجَّتان / ضَجَّاتٍ / ضَجَّتَيْن", "type": "word"}
+  {"tense1": "polémique", "tense2": "ضَجَّة / ضَجَّات / ضَجَّتان / ضَجَّاتٍ / ضَجَّتَيْن", "type": "word"},
+  {"tense1": "fiancaille", "tense2": "خُطوبَة / خُطوبَات / خُطوبَتان / خُطوبَاتٍ / خُطوبَتَيْن", "type": "word"},
+  {"tense1": "vieillissement", "tense2": "شَيْخوخَة / شَيْخوخَات / شَيْخوخَتان / شَيْخوخَاتٍ / شَيْخوخَتَيْن", "type": "word"},
+  {"tense1": "accueiller", "tense2": "احْتَضَنَ/يَحْتَضِنُ/احْتِضان/احْتَضِنْ/يُحْتَضَنُ/احْتُضِنَ", "type": "verb"},
+  {"tense1": "soirée", "tense2": "أُمْسِيَة / أُمْسِيَات / أُمْسِيَتان / أُمْسِيَاتٍ / أُمْسِيَتَيْن", "type": "word"},
+  {"tense1": "fraude", "tense2": "احْتِيال / احْتِيالات / احْتِيالان / احْتِيالاتٍ / احْتِيالَيْن", "type": "word"},
+  {"tense1": "Blocus", "tense2": "حِصار / حُصُر / حِصاران / حُصُرٍ / حِصارَيْن", "type": "word"},
+  {"tense1": "traité", "tense2": "مُعاهَدَة / مُعاهَدات / مُعاهَدَتان / مُعاهَداتٍ / مُعاهَدَتَيْن", "type": "word"},
+  {"tense1": "Titre/victoire", "tense2": "لَقَب / أَلْقاب / لَقَبان / أَلْقابٍ / لَقَبَيْن", "type": "word"},
+  {"tense1": "Intercepter", "tense2": "اعْتَرَضَ/يَعْتَرِضُ/اعْتِراض/اعْتَرِضْ/يُعْتَرَضُ/اعْتُرِضَ", "type": "verb"},
+  {"tense1": "souveraineté", "tense2": "السِّيادَة / السِّيادَات / السِّيادَتان / السِّيادَاتٍ / السِّيادَتَيْن", "type": "word"},
+  {"tense1": "funéraille", "tense2": "تَشْيِيع / تَشْيِيعَات / تَشْيِيعان / تَشْيِيعَاتٍ / تَشْيِيعَيْن", "type": "word"},
+  {"tense1": "dissoudre", "tense2": "حَلَّ/يَحُلُّ/حَلّ/حُلَّ/يُحَلُّ/حُلَّ", "type": "verb"},
+  {"tense1": "Situation", "tense2": "الوَضْع / الأَوْضاع / الوَضْعان / الأَوْضاعِ / الوَضْعَيْن", "type": "word"},
+  {"tense1": "Frère", "tense2": "شَقيق / أَشِقّاء / شَقيقان / أَشِقّاءٍ / شَقيقَيْن", "type": "word"},
+  {"tense1": "tragédie", "tense2": "مَأساة / مَآسٍ / مَأساَتان / مَآسٍ / مَأساَتَيْن", "type": "word"},
+  {"tense1": "Cas", "tense2": "حالَة / حالَات / حالَتان / حالَاتٍ / حالَتَيْن", "type": "word"},
+  {"tense1": "Exode", "tense2": "نُزوح / نُزوحات / نُزوحان / نُزوحاتٍ / نُزوحَيْن", "type": "word"}
 ]
         };
 
