new arabic words

--- a/index.html
+++ b/index.html
@@ -2249,7 +2249,24 @@
   {"tense1": "Frère", "tense2": "شَقيق / أَشِقّاء / شَقيقان / أَشِقّاءٍ / شَقيقَيْن", "type": "word"},
   {"tense1": "tragédie", "tense2": "مَأساة / مَآسٍ / مَأساَتان / مَآسٍ / مَأساَتَيْن", "type": "word"},
   {"tense1": "Cas", "tense2": "حالَة / حالَات / حالَتان / حالَاتٍ / حالَتَيْن", "type": "word"},
-  {"tense1": "Exode", "tense2": "نُزوح / نُزوحات / نُزوحان / نُزوحاتٍ / نُزوحَيْن", "type": "word"}
+  {"tense1": "Exode", "tense2": "نُزوح / نُزوحات / نُزوحان / نُزوحاتٍ / نُزوحَيْن", "type": "word"},
+  {"tense1": "Documenter", "tense2": "وَثَّقَ/يُوَثِّقُ/تَوْثِيق/وَثِّقْ/يُوَثَّقُ/وُثِّقَ", "type": "verb"},
+  {"tense1": "Lutter", "tense2": "كَافَحَ/يُكَافِحُ/مُكَافَحَة/كَافِحْ/يُكَافَحُ/كُوفِحَ", "type": "verb"},
+  {"tense1": "Autorité", "tense2": "جِهَة / جِهَات / جِهَتان / جِهَاتٍ / جِهَتَيْن", "type": "word"},
+  {"tense1": "Cligner (des yeux)", "tense2": "رَمَشَ/يَرْمُشُ/رَمْش/اِرْمُشْ/يُرْمَشُ/رُمِشَ", "type": "verb"},
+  {"tense1": "Pile", "tense2": "خَلِيَّة / خَلِيَّات / خَلِيَّتان / خَلِيَّاتٍ / خَلِيَّتَيْن", "type": "word"},
+  {"tense1": "Écologique", "tense2": "بِيئِيّ / بِيئِيُّون / بِيئِيَّان / بِيئِيِّينَ / بِيئِيَّيْن", "type": "word"},
+  {"tense1": "fossile", "tense2": "حُفُورَة / حُفُورَات / حُفُورَتان / حُفُورَاتٍ / حُفُورَتَيْن", "type": "word"},
+  {"tense1": "décevoir", "tense2": "خَيَّبَ/يُخَيِّبُ/تَخْيِيب/خَيِّبْ/يُخَيَّبُ/خُيِّبَ", "type": "verb"},
+  {"tense1": "souterraine", "tense2": "جَوْفِيَّة / جَوْفِيَّات / جَوْفِيَّتان / جَوْفِيَّاتٍ / جَوْفِيَّتَيْن", "type": "word"},
+  {"tense1": "informatique", "tense2": "حَوْسَبَة / حَوْسَبَات / حَوْسَبَتان / حَوْسَبَاتٍ / حَوْسَبَتَيْن", "type": "word"},
+  {"tense1": "quantique", "tense2": "كَمُومِيّ / كَمُومِيُّون / كَمُومِيَّان / كَمُومِيِّينَ / كَمُومِيَّيْن", "type": "word"},
+  {"tense1": "Mammifère", "tense2": "ثَدِيِّيّ / ثَدِيِّيُّون / ثَدِيِّيَّان / ثَدِيِّيِّينَ / ثَدِيِّيَّيْن", "type": "word"},
+  {"tense1": "mesure", "tense2": "قِيَاس / قِيَاسَات / قِيَاسَتان / قِيَاسَاتٍ / قِيَاسَتَيْن", "type": "word"},
+  {"tense1": "reporter", "tense2": "أَجَّلَ/يُؤَجِّلُ/تَأْجِيل/أَجِّلْ/يُؤَجَّلُ/أُجِّلَ", "type": "verb"},
+  {"tense1": "fuite", "tense2": "تَسَرُّب / تَسَرُّبَات / تَسَرُّبَتان / تَسَرُّبَاتٍ / تَسَرُّبَتَيْن", "type": "word"},
+  {"tense1": "Rugueux", "tense2": "خَشِن / خَشِنُون / خَشِنَان / خَشِنِينَ / خَشِنَيْن", "type": "word"},
+  {"tense1": "Trève", "tense2": "هُدْنَة / هُدَنَات / هُدْنَتان / هُدَنَاتٍ / هُدْنَتَيْن", "type": "word"}
 ]
         };
 
