new arabic words

--- a/index.html
+++ b/index.html
@@ -2254,7 +2254,7 @@
   {"tense1": "Lutter", "tense2": "كَافَحَ/يُكَافِحُ/مُكَافَحَة/كَافِحْ/يُكَافَحُ/كُوفِحَ", "type": "verb"},
   {"tense1": "Autorité", "tense2": "جِهَة / جِهَات / جِهَتان / جِهَاتٍ / جِهَتَيْن", "type": "word"},
   {"tense1": "Cligner (des yeux)", "tense2": "رَمَشَ/يَرْمُشُ/رَمْش/اِرْمُشْ/يُرْمَشُ/رُمِشَ", "type": "verb"},
-  {"tense1": "Pile", "tense2": "خَلِيَّة / خَلِيَّات / خَلِيَّتان / خَلِيَّاتٍ / خَلِيَّتَيْن", "type": "word"},
+  {"tense1": "Pile (électrique)", "tense2": "خَلِيَّة / خَلِيَّات / خَلِيَّتان / خَلِيَّاتٍ / خَلِيَّتَيْن", "type": "word"},
   {"tense1": "Écologique", "tense2": "بِيئِيّ / بِيئِيُّون / بِيئِيَّان / بِيئِيِّينَ / بِيئِيَّيْن", "type": "word"},
   {"tense1": "fossile", "tense2": "حُفُورَة / حُفُورَات / حُفُورَتان / حُفُورَاتٍ / حُفُورَتَيْن", "type": "word"},
   {"tense1": "décevoir", "tense2": "خَيَّبَ/يُخَيِّبُ/تَخْيِيب/خَيِّبْ/يُخَيَّبُ/خُيِّبَ", "type": "verb"},
