new arabic words

--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,7 @@
     {"tense1": "verrou", "tense2": "قُفْل / أَقْفَال / قُفْلَان / أَقْفَالاً / قُفْلَيْن", "type": "word"},
     {"tense1": "frapper", "tense2": "قَرَعَ / يَقْرَعُ / قَرْع / اِقْرَعْ / يُقْرَعُ / قُرِعَ", "type": "verb"},
     {"tense1": "spec", "tense2": "صِفَة / صِفَات / صِفَتَان / صِفَاتٍ / صِفَتَيْن", "type": "word"},
-    {"tense1": "enlever", "tense2": "نَزَعَ / يَنْزَعُ / نَزْع / اِنْزَعْ / يُنْزَعُ / نُزِعَ", "type": "verb"},
+    {"tense1": "Arracher/retirer", "tense2": "نَزَعَ / يَنْزَعُ / نَزْع / اِنْزَعْ / يُنْزَعُ / نُزِعَ", "type": "verb"},
     {"tense1": "envelopper", "tense2": "غَلَّفَ / يُغَلِّفُ / تَغْلِيف / غَلِّفْ / يُغَلَّفُ / غُلِّفَ", "type": "verb"},
     {"tense1": "atelier", "tense2": "وَرْشَة / وَرَش / وَرْشَتَان / وَرَشاً / وَرْشَتَيْن", "type": "word"},
     {"tense1": "nain", "tense2": "قَزَم / أَقْزَام / قَزَمَان / أَقْزَاماً / قَزَمَيْن", "type": "word"},
@@ -1861,7 +1861,7 @@
   {"tense1": "battre", "tense2": "هَزَمَ/يَهْزِمُ/هَزِيمَة/اِهْزِمْ/يُهْزَمُ/هُزِمَ", "type": "verb"},
   {"tense1": "ronfler", "tense2": "شَخَرَ/يَشْخُرُ/شَخِير/اِشْخُرْ/يُشْخَرُ/شُخِرَ", "type": "verb"},
   {"tense1": "cadavre", "tense2": "جُثَّة/جُثَث/جُثَّتَانِ/جُثَثًا/جُثَّتَيْنِ", "type": "word"},
-  {"tense1": "Comploter", "tense2": "دَبَّرَ/يُدَبِّرُ/تَدْبِير/دَبِّرْ/يُدَبَّرُ/دُبِّرَ", "type": "verb"},
+  {"tense1": "Organiser/gérer", "tense2": "دَبَّرَ/يُدَبِّرُ/تَدْبِير/دَبِّرْ/يُدَبَّرُ/دُبِّرَ", "type": "verb"},
   {"tense1": "S’écouler", "tense2": "تَدَفَّقَ/يَتَدَفَّقُ/تَدَفُّق/تَدَفَّقْ/يُتَدَفَّقُ/تُدُفِّقَ", "type": "verb"},
   {"tense1": "paralysie", "tense2": "شَلَل/شَلَلات/شَلَلَانِ/شَلَلاتٍ/شَلَلَيْنِ", "type": "word"},
   {"tense1": "En avoir marre", "tense2": "سَئِمَ/يَسْأَمُ/سَآمَة/اِسْأَمْ/يُسْأَمُ/سُئِمَ", "type": "verb"},
@@ -2266,7 +2266,24 @@
   {"tense1": "reporter", "tense2": "أَجَّلَ/يُؤَجِّلُ/تَأْجِيل/أَجِّلْ/يُؤَجَّلُ/أُجِّلَ", "type": "verb"},
   {"tense1": "fuite", "tense2": "تَسَرُّب / تَسَرُّبَات / تَسَرُّبَتان / تَسَرُّبَاتٍ / تَسَرُّبَتَيْن", "type": "word"},
   {"tense1": "Rugueux", "tense2": "خَشِن / خَشِنُون / خَشِنَان / خَشِنِينَ / خَشِنَيْن", "type": "word"},
-  {"tense1": "Trève", "tense2": "هُدْنَة / هُدَنَات / هُدْنَتان / هُدَنَاتٍ / هُدْنَتَيْن", "type": "word"}
+  {"tense1": "Trève", "tense2": "هُدْنَة / هُدَنَات / هُدْنَتان / هُدَنَاتٍ / هُدْنَتَيْن", "type": "word"},
+  {"tense1": "Imiter", "tense2": "حاكى/يُحاكي/مُحاكاة/حاكِ/يُحاكَى/حُوكِيَ", "type": "verb"},
+  {"tense1": "signe", "tense2": "عَلامَة / عَلامات / عَلامَتان / عَلاماتٍ / عَلامَتَيْن", "type": "word"},
+  {"tense1": "Échantillon", "tense2": "عَيِّنَة / عَيِّنات / عَيِّنَتان / عَيِّناتٍ / عَيِّنَتَيْن", "type": "word"},
+  {"tense1": "Provoquer", "tense2": "أَحْدَثَ/يُحْدِثُ/إِحْداث/أَحْدِثْ/يُحْدَثُ/أُحْدِثَ", "type": "verb"},
+  {"tense1": "amateur", "tense2": "عاشِق / عُشّاق / عاشِقان / عُشّاقٍ / عاشِقَيْن", "type": "word"},
+  {"tense1": "inflation", "tense2": "تَضَخُّم / تَضَخُّمات / تَضَخُّمان / تَضَخُّماتٍ / تَضَخُّمَيْن", "type": "word"},
+  {"tense1": "Faché", "tense2": "مُسْتاء / مُسْتاؤون / مُسْتاءان / مُسْتاءينَ / مُسْتاءَيْن", "type": "word"},
+  {"tense1": "Allaiter", "tense2": "أَرْضَعَ/يُرْضِعُ/إِرْضاع/أَرْضِعْ/يُرْضَعُ/أُرْضِعَ", "type": "verb"},
+  {"tense1": "facade", "tense2": "واجِهَة / واجِهات / واجِهَتان / واجِهاتٍ / واجِهَتَيْن", "type": "word"},
+  {"tense1": "obligation", "tense2": "حَتْمِيَّة / حَتْمِيّات / حَتْمِيَّتان / حَتْمِيّاتٍ / حَتْمِيَّتَيْن", "type": "word"},
+  {"tense1": "Bord/rebors", "tense2": "حافَّة / حوافّ / حافَّتان / حوافٍّ / حافَّتَيْن", "type": "word"},
+  {"tense1": "spirale", "tense2": "دُوَّامَة / دُوَّامات / دُوَّامَتان / دُوَّاماتٍ / دُوَّامَتَيْن", "type": "word"},
+  {"tense1": "s’avérer", "tense2": "اِتَّضَحَ/يَتَّضِحُ/اِتِّضاح/اِتَّضِحْ/يُتَّضَحُ/اُتُّضِحَ", "type": "verb"},
+  {"tense1": "choquant", "tense2": "صادِم / صادِمون / صادِمان / صادِمينَ / صادِمَيْن", "type": "word"},
+  {"tense1": "Sens morale", "tense2": "ضَمير / ضَمائر / ضَميران / ضَمائرَ / ضَميرَيْن", "type": "word"},
+  {"tense1": "Petit-fils", "tense2": "حَفيد / أَحفاد / حَفيدَان / أَحفادٍ / حَفيدَيْن", "type": "word"},
+  {"tense1": "signalement", "tense2": "بَلاغ / بَلاغات / بَلاغان / بَلاغاتٍ / بَلاغَيْن", "type": "word"}
 ]
         };
 
