new arabic words

--- a/index.html
+++ b/index.html
@@ -2283,7 +2283,27 @@
   {"tense1": "choquant", "tense2": "صادِم / صادِمون / صادِمان / صادِمينَ / صادِمَيْن", "type": "word"},
   {"tense1": "Sens morale", "tense2": "ضَمير / ضَمائر / ضَميران / ضَمائرَ / ضَميرَيْن", "type": "word"},
   {"tense1": "Petit-fils", "tense2": "حَفيد / أَحفاد / حَفيدَان / أَحفادٍ / حَفيدَيْن", "type": "word"},
-  {"tense1": "signalement", "tense2": "بَلاغ / بَلاغات / بَلاغان / بَلاغاتٍ / بَلاغَيْن", "type": "word"}
+  {"tense1": "signalement", "tense2": "بَلاغ / بَلاغات / بَلاغان / بَلاغاتٍ / بَلاغَيْن", "type": "word"},
+  {"tense1": "modèle", "tense2": "طِرَاز / أَطْرِزَة / طِرَازَان / أَطْرِزَةً / طِرَازَيْن", "type": "word"},
+ {"tense1": "poste", "tense2": "مَنْصِب / مَنَاصِب / مَنْصِبَان / مَنَاصِبَ / مَنْصِبَيْن", "type": "word"},
+ {"tense1": "Rétablissement", "tense2": "تَعَافٍ / تَعَافِيَات / تَعَافِيَان / تَعَافِيَاتٍ / تَعَافِيَيْن", "type": "word"},
+ {"tense1": "Effort", "tense2": "كَدّ / كُدُود / كَدَّان / كُدُودًا / كَدَّيْن", "type": "word"},
+ {"tense1": "continent", "tense2": "قَارَّة / قَارَّات / قَارَّتَان / قَارَّاتٍ / قَارَّتَيْن", "type": "word"},
+ {"tense1": "Aérien", "tense2": "جَوِّيّ / جَوِّيُّون / جَوِّيَّان / جَوِّيِّينَ / جَوِِّيَّيْن", "type": "word"},
+ {"tense1": "Neutraliser", "tense2": "عَطَّلَ / يُعَطِّلُ / تَعْطِيل / عَطِّلْ / يُعَطَّلُ / عُطِّلَ", "type": "verb"},
+ {"tense1": "Intrigue/scenario", "tense2": "حَبْكَة / حَبَكَات / حَبْكَتَان / حَبَكَاتٍ / حَبْكَتَيْن", "type": "word"},
+ {"tense1": "justice", "tense2": "قَضَاء / أَقْضِيَة / قَضَاءَان / أَقْضِيَةً / قَضَاءَيْن", "type": "word"},
+ {"tense1": "Donner raison à", "tense2": "أَنْصَفَ / يُنْصِفُ / إِنْصَاف / أَنْصِفْ / يُنْصَفُ / أُنْصِفَ", "type": "verb"},
+ {"tense1": "Etre solidaire", "tense2": "تَضَامَنَ / يَتَضَامَنُ / تَضَامُن / تَضَامَنْ / يُتَضَامَنُ / تُضُومِنَ", "type": "verb"},
+ {"tense1": "Licencier", "tense2": "أَقَالَ / يُقِيلُ / إِقَالَة / أَقِلْ / يُقَالُ / أُقِيلَ", "type": "verb"},
+ {"tense1": "Radio", "tense2": "إِذَاعِيّ / إِذَاعِيُّون / إِذَاعِيَّان / إِذَاعِيِّينَ / إِذَاعِيَّيْن", "type": "word"},
+ {"tense1": "Silence", "tense2": "صَمْت / أَصْمَات / صَمْتَان / أَصْمَاتًا / صَمْتَيْن", "type": "word"},
+ {"tense1": "Mener", "tense2": "خَاضَ / يَخُوضُ / خَوْض / خُضْ / يُخَاضُ / خِيضَ", "type": "verb"},
+ {"tense1": "Condamnation", "tense2": "إِدَانَة / إِدَانَات / إِدَانَتَان / إِدَانَاتٍ / إِدَانَتَيْن", "type": "word"},
+ {"tense1": "Alcool", "tense2": "خَمْر / خُمُور / خَمْرَان / خُمُورًا / خَمْرَيْن", "type": "word"},
+ {"tense1": "La majorité de", "tense2": "جُلّ", "type": "sentence"},
+ {"tense1": "profit", "tense2": "رِبْح / أَرْبَاح / رِبْحَان / أَرْبَاحًا / رِبْحَيْن", "type": "word"},
+ {"tense1": "mort", "tense2": "نُفُوق", "type": "word"}
 ]
         };
 
