new arabic words

--- a/index.html
+++ b/index.html
@@ -1935,7 +1935,7 @@
   {"tense1": "Charger de", "tense2": "كََلَّفَ/يُكَلِّفُ/تَكْلِيفٌ/اُكَلِّفْ/يُكَلَّفُ/كُلِّفَ", "type": "verb"},
   {"tense1": "Estimer", "tense2": "قَدَّرَ/يُقَدِّرُ/تَقْدِيرٌ/اُقَدِّرْ/يُقَدَّرُ/قُدِّرَ", "type": "verb"},
   {"tense1": "Coloniser", "tense2": "اسْتَعْمَرَ/يَسْتَعْمِرُ/اسْتِعْمَارٌ/اِسْتَعْمِرْ/يُسْتَعْمَرُ/اسْتُعْمِرَ", "type": "verb"},
-  {"tense1": "Faire face", "tense2": "صادَفَ/يُصَادِفُ/مُصَادَفَةٌ/اُصَادِفْ/يُصَادِفُ/صُودِفَ", "type": "verb"},
+  {"tense1": "Coïncider avec", "tense2": "صادَفَ/يُصَادِفُ/مُصَادَفَةٌ/اُصَادِفْ/يُصَادِفُ/صُودِفَ", "type": "verb"},
   {"tense1": "Guérir", "tense2": "شَفَى/يَشْفَى/شِفَاءٌ/اِشْفَ/يُشْفَى/شُفِيَ", "type": "verb"},
   {"tense1": "bâtir", "tense2": "شَيْدَ/يُشَيِّدُ/تَشْيِيدٌ/اُشَيِّدْ/يُشَيَّدُ/شُيِّدَ", "type": "verb"},
   {"tense1": "Permettre", "tense2": "أَتَاحَ/يُتِيحُ/إِتِيَاحٌ/اُتِيحْ/يُتَاحُ/أُتِيحَ", "type": "verb"},
@@ -2303,7 +2303,27 @@
  {"tense1": "Alcool", "tense2": "خَمْر / خُمُور / خَمْرَان / خُمُورًا / خَمْرَيْن", "type": "word"},
  {"tense1": "La majorité de", "tense2": "جُلّ", "type": "sentence"},
  {"tense1": "profit", "tense2": "رِبْح / أَرْبَاح / رِبْحَان / أَرْبَاحًا / رِبْحَيْن", "type": "word"},
- {"tense1": "mort", "tense2": "نُفُوق", "type": "word"}
+ {"tense1": "mort", "tense2": "نُفُوق", "type": "word"},
+ {"tense1": "Autorisé", "tense2": "حَلال / حَلالات / حَلالان / حَلالاتٍ / حَلالَيْن", "type": "word"},
+  {"tense1": "Ruser", "tense2": "راوَغَ/يُراوِغُ/مُراوَغَة/راوِغْ/يُراوَغُ/رُوِغَ", "type": "verb"},
+  {"tense1": "Caoutchouc", "tense2": "مَطاطِيَّة / مَطاطِيّات / مَطاطِيَّتان / مَطاطِيّاتٍ / مَطاطِيَّتَيْن", "type": "word"},
+  {"tense1": "illusion", "tense2": "وَهْم / أَوْهام / وَهْمان / أَوْهامٍ / وَهْمَيْن", "type": "word"},
+  {"tense1": "évoluer", "tense2": "تَطَوَّرَ/يَتَطَوَّرُ/تَطَوُّر/تَطَوَّرْ/يُتَطَوَّرُ/تُطُوِّرَ", "type": "verb"},
+  {"tense1": "Supplier", "tense2": "تَوَسَّلَ/يَتَوَسَّلُ/تَوَسُّل/تَوَسَّلْ/يُتَوَسَّلُ/تُوُسِّلَ", "type": "verb"},
+  {"tense1": "désespoir", "tense2": "يَأْس / يَآسات / يَأْسان / يَآساتٍ / يَأْسَيْن", "type": "word"},
+  {"tense1": "multar", "tense2": "تَغَرَّمَ/يَتَغَرَّمُ/تَغَرُّم/تَغَرَّمْ/يُتَغَرَّمُ/تُغُرِّمَ", "type": "verb"},
+  {"tense1": "Organisme/autorité", "tense2": "هَيْئَة / هَيْئات / هَيْئَتان / هَيْئاتٍ / هَيْئَتَيْن", "type": "word"},
+  {"tense1": "Faire exprès", "tense2": "تَعَمَّدَ/يَتَعَمَّدُ/تَعَمُّد/تَعَمَّدْ/يُتَعَمَّدُ/تُعُمِّدَ", "type": "verb"},
+  {"tense1": "fictive", "tense2": "وَهْمِيَّة / وَهْمِيّات / وَهْمِيَّتان / وَهْمِيّاتٍ / وَهْمِيَّتَيْن", "type": "word"},
+  {"tense1": "fréquence", "tense2": "تَرَدُّد / تَرَدُّدات / تَرَدُّدان / تَرَدُّداتٍ / تَرَدُّدَيْن", "type": "word"},
+  {"tense1": "tâches", "tense2": "أَداء / أَداءات / أَداءان / أَداءاتٍ / أَداءَيْن", "type": "word"},
+  {"tense1": "trou", "tense2": "فَجْوَة / فَجَوات / فَجْوَتان / فَجَواتٍ / فَجْوَتَيْن", "type": "word"},
+  {"tense1": "Se contenter", "tense2": "اِكْتَفَى/يَكْتَفِي/اِكْتِفاء/اِكْتَفِ/يُكْتَفى/اُكْتُفِيَ", "type": "verb"},
+  {"tense1": "Cauchemar", "tense2": "كابوس / كَوابِيس / كابوسان / كَوابِيسٍ / كابوسَيْن", "type": "word"},
+  {"tense1": "occulter", "tense2": "غُيِّبَ/يُغَيَّبُ/تَغْييب/غَيِّبْ/يُغَيَّبُ/غُيِّبَ", "type": "verb"},
+  {"tense1": "Époque", "tense2": "حِقْبَة / حِقَب / حِقْبَتان / حِقَبٍ / حِقْبَتَيْن", "type": "word"},
+  {"tense1": "génie", "tense2": "نابِغ / نَوابِغ / نابِغان / نَوابِغٍ / نابِغَيْن", "type": "word"},
+  {"tense1": "briller", "tense2": "سَطَعَ/يَسْطَعُ/سُطوع/اِسْطَعْ/يُسْطَعُ/سُطِعَ", "type": "verb"}
 ]
         };
 
