new arabic words

--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
   {"tense1": "Commetre", "tense2": "اِرْتَكَبَ / يَرْتَكِبُ / اِرْتِكَاب / اِرْتَكِبْ / يُرْتَكَب / اُرْتُكِبَ", "type": "verb"},
   {"tense1": "Massacre", "tense2": "مَجْزَرَة / مَجَازِر / مَجْزَرَتَان / مَجَازِرَ / مَجْزَرَتَيْن", "type": "word"},
   {"tense1": "Contre", "tense2": "بِحَقّ", "type": "word"},
-  {"tense1": "Se pencher", "tense2": "اِكْتَفَى / يَكْتَفِي / اِكْتِفَاء / اِكْتَفِ / يُكْتَفَى / اُكْتُفِيَ", "type": "verb"},
+  {"tense1": "Se pencher", "tense2": "انحنى / ينحني / انحناء / انحنِ / يُنحَنى / اُنحُنيَ", "type": "verb"},
   {"tense1": "Fesse", "tense2": "مُؤَخِّرَة / مُؤَخِّرَات / مُؤَخِّرَتَان / مُؤَخِّرَاتٍ / مُؤَخِّرَتَيْن", "type": "word"},
   {"tense1": "Salive", "tense2": "رِيق / أَرْيَاق / رِيقَان / أَرْيَاقًا / رِيقَيْن", "type": "word"},
   {"tense1": "Éclairer", "tense2": "أَنَارَ / يُنِيرُ / إِنَارَة / أَنِرْ / يُنَار / أُنِيرَ", "type": "verb"},
@@ -2055,7 +2055,7 @@
   {"tense1":"répéter","tense2":"أَعَادَ/يُعِيدُ/إِعَادَةٌ/أَعِدْ/يُعَادُ/أُعِيدَ","type":"verb"},
   {"tense1":"conclure","tense2":"اختَتَمَ/يَختَتِمُ/اخْتِتَامٌ/اخْتِتِمْ/يُختَتَمُ/اُختُتِمَ","type":"verb"},
   {"tense1":"diffuser","tense2":"رَوَّجَ/يُرَوِّجُ/تَرْوِيجٌ/رَوِّجْ/يُرَوَّجُ/رُوِّجَ","type":"verb"},
-  {"tense1":"se trouver","tense2":"كَمَنَ/تَكْمُنُ/كُمُونٌ/اكْمُنْ/تُكْمَنُ/كُمِنَ","type":"verb"},
+  {"tense1":"se trouver/résider","tense2":"كَمَنَ/تَكْمُنُ/كُمُونٌ/اكْمُنْ/تُكْمَنُ/كُمِنَ","type":"verb"},
   {"tense1":"dénoncer","tense2":"نَدَّدَ/يُنَدِّدُ/تَنْدِيدٌ/نَدِّدْ/يُنَدَّدُ/نُدِّدَ","type":"verb"},
   {"tense1":"réprimer","tense2":"قَمَعَ/يَقْمَعُ/قَمْعٌ/قْمَعْ/يُقْمَعُ/قُمِعَ","type":"verb"},
   {"tense1": "Manipuler", "tense2": "تَلاعَبَ/يَتَلاعَبُ/تَلاعُب/تَلاعَبْ/يُتَلاعَبُ/تُلُوعِبَ", "type": "verb"},
@@ -2322,7 +2322,27 @@
   {"tense1": "occulter", "tense2": "غُيِّبَ/يُغَيَّبُ/تَغْييب/غَيِّبْ/يُغَيَّبُ/غُيِّبَ", "type": "verb"},
   {"tense1": "Époque", "tense2": "حِقْبَة / حِقَب / حِقْبَتان / حِقَبٍ / حِقْبَتَيْن", "type": "word"},
   {"tense1": "génie", "tense2": "نابِغ / نَوابِغ / نابِغان / نَوابِغٍ / نابِغَيْن", "type": "word"},
-  {"tense1": "briller", "tense2": "سَطَعَ/يَسْطَعُ/سُطوع/اِسْطَعْ/يُسْطَعُ/سُطِعَ", "type": "verb"}
+  {"tense1": "briller", "tense2": "سَطَعَ/يَسْطَعُ/سُطوع/اِسْطَعْ/يُسْطَعُ/سُطِعَ", "type": "verb"},
+  {"tense1": "Tatouage", "tense2": "وَشْم / وُشوم / وَشْمان / وُشومٍ / وَشْمَيْن", "type": "word"},
+  {"tense1": "forum", "tense2": "مُنْتَدًى / مُنْتَدَيات / مُنْتَدَيان / مُنْتَدَياتٍ / مُنْتَدَيَيْن", "type": "word"},
+  {"tense1": "hymne", "tense2": "نَشيد / أَناشيد / نَشيدان / أَناشيدٍ / نَشيدَيْن", "type": "word"},
+  {"tense1": "nation", "tense2": "أُمَّة / أُمَم / أُمَّتان / أُمَمٍ / أُمَّتَيْن", "type": "word"},
+  {"tense1": "s’addresser à", "tense2": "خاطَبَ/يُخاطِبُ/مُخاطَبَة/خاطِبْ/يُخاطَبُ/خوطِبَ", "type": "verb"},
+  {"tense1": "injecter", "tense2": "حَقَنَ/يَحْقِنُ/حَقْن/اِحْقِنْ/يُحْقَنُ/حُقِنَ", "type": "verb"},
+  {"tense1": "envahir", "tense2": "اِجْتاحَ/يَجْتاحُ/اِجْتِياح/اِجْتَحْ/يُجْتاحُ/اُجْتِيحَ", "type": "verb"},
+  {"tense1": "obsession", "tense2": "هَوَس / أَهْواس / هَوَسان / أَهْواسٍ / هَوَسَيْن", "type": "word"},
+  {"tense1": "libérer", "tense2": "أَفْرَجَ/يُفْرِجُ/إفْراج/أَفْرِجْ/يُفْرَجُ/أُفْرِجَ", "type": "verb"},
+  {"tense1": "Approche/démarche", "tense2": "نَهْج / مَناهِج / نَهْجان / مَناهِجٍ / نَهْجَيْن", "type": "word"},
+  {"tense1": "s’harmoniser", "tense2": "تَناغَمَ/يَتَناغَمُ/تَناغُم/تَناغَمْ/يُتَناغَمُ/تُنُوغِمَ", "type": "verb"},
+  {"tense1": "rive", "tense2": "ضِفَّة / ضِفاف / ضِفَّتان / ضِفافٍ / ضِفَّتَيْن", "type": "word"},
+  {"tense1": "Profiter de", "tense2": "تَنَعَّمَ/يَتَنَعَّمُ/تَنَعُّم/تَنَعَّمْ/يُتَنَعَّمُ/تُنُعِّمَ", "type": "verb"},
+  {"tense1": "majestueux", "tense2": "شامِخ / شامِخون / شامِخان / شامِخين / شامِخَيْن", "type": "word"},
+  {"tense1": "Adoption", "tense2": "اِعْتِماد / اِعْتِمادات / اِعْتِمادان / اِعْتِماداتٍ / اِعْتِمادَيْن", "type": "word"},
+  {"tense1": "captivant", "tense2": "مُشَوِّق / مُشَوِّقات / مُشَوِّقان / مُشَوِّقاتٍ / مُشَوِّقَيْن", "type": "word"},
+  {"tense1": "fer", "tense2": "حَديد / حَدائِد / حَديدان / حَدائِدٍ / حَديدَيْن", "type": "word"},
+  {"tense1": "Corps (sans vie)", "tense2": "جَسَد / أَجْساد / جَسَدان / أَجْسادٍ / جَسَدَيْن", "type": "word"},
+  {"tense1": "renseignement", "tense2": "اِسْتِخْبار / اِسْتِخْبارات / اِسْتِخْباران / اِسْتِخْباراتٍ / اِسْتِخْبارَيْن", "type": "word"},
+  {"tense1": "Lutte", "tense2": "نِضال / نِضالات / نِضالان / نِضالاتٍ / نِضالَيْن", "type": "word"}
 ]
         };
 
