new arabic words

--- a/index.html
+++ b/index.html
@@ -2342,7 +2342,27 @@
   {"tense1": "fer", "tense2": "حَديد / حَدائِد / حَديدان / حَدائِدٍ / حَديدَيْن", "type": "word"},
   {"tense1": "Corps (sans vie)", "tense2": "جَسَد / أَجْساد / جَسَدان / أَجْسادٍ / جَسَدَيْن", "type": "word"},
   {"tense1": "renseignement", "tense2": "اِسْتِخْبار / اِسْتِخْبارات / اِسْتِخْباران / اِسْتِخْباراتٍ / اِسْتِخْبارَيْن", "type": "word"},
-  {"tense1": "Lutte", "tense2": "نِضال / نِضالات / نِضالان / نِضالاتٍ / نِضالَيْن", "type": "word"}
+  {"tense1": "Lutte", "tense2": "نِضال / نِضالات / نِضالان / نِضالاتٍ / نِضالَيْن", "type": "word"},
+  {"tense1": "Être considéré", "tense2": "عُدَّ/يُعَدُّ/عَدّ/عُدَّ/يُعَدُّ/عُدَّ", "type": "verb"},
+  {"tense1": "Casi/semi", "tense2": "شِبْه / أَشْباه / شِبْهان / أَشْباهٍ / شِبْهَيْن", "type": "word"},
+  {"tense1": "En particulier", "tense2": "لا سِيَّما", "type": "sentence"},
+  {"tense1": "calorie", "tense2": "سُعْرَة حَرارِيَّة / سُعْرات حَرارِيَّة / سُعْرَتان حَرارِيَّتان / سُعْراتٍ حَرارِيَّة / سُعْرَتَيْن حَرارِيَّتَيْن", "type": "word"},
+  {"tense1": "critique", "tense2": "نَقْد / نُقود / نَقْدان / نُقودٍ / نَقْدَيْن", "type": "word"},
+  {"tense1": "Capitalisme", "tense2": "رَأْسْمالِيَّة / رَأْسْمالِيّات / رَأْسْمالِيَّتان / رَأْسْمالِيّاتٍ / رَأْسْمالِيَّتَيْن", "type": "word"},
+  {"tense1": "faillite", "tense2": "إِفْلاس / إِفْلاسات / إِفْلاسان / إِفْلاساتٍ / إِفْلاسَيْن", "type": "word"},
+  {"tense1": "jubilarse", "tense2": "تَقاعَدَ/يَتَقاعَدُ/تَقاعُد/تَقاعَدْ/يُتَقاعَدُ/تُقُوعِدَ", "type": "verb"},
+  {"tense1": "procés", "tense2": "مُحاكَمَة / مُحاكَمات / مُحاكَمَتان / مُحاكَماتٍ / مُحاكَمَتَيْن", "type": "word"},
+  {"tense1": "Grave/sevère", "tense2": "بَليغ / بُلداء / بَليغان / بُلداءٍ / بَليغَيْن", "type": "word"},
+  {"tense1": "boue", "tense2": "وَحْل / أَوْحال / وَحْلان / أَوْحالٍ / وَحْلَيْن", "type": "word"},
+  {"tense1": "En hommage à", "tense2": "تَقْديرًا", "type": "sentence"},
+  {"tense1": "Rejoindre", "tense2": "اِلْتَحَقَ/يَلْتَحِقُ/اِلْتِحاق/اِلْتَحِقْ/يُلْتَحَقُ/اُلْتُحِقَ", "type": "verb"},
+  {"tense1": "Embarrasser", "tense2": "أَحْرَجَ/يُحْرِجُ/إحْراج/أَحْرِجْ/يُحْرَجُ/أُحْرِجَ", "type": "verb"},
+  {"tense1": "Tweet", "tense2": "تَغْريدَة / تَغْريدات / تَغْريدَتان / تَغْريداتٍ / تَغْريدَتَيْن", "type": "word"},
+  {"tense1": "Peau", "tense2": "بَشَرَة / بَشَرات / بَشَرَتان / بَشَراتٍ / بَشَرَتَيْن", "type": "word"},
+  {"tense1": "En cours", "tense2": "قائِمًا", "type": "sentence"},
+  {"tense1": "Nier", "tense2": "نَفى/يَنْفي/نَفْي/اِنْفِ/يُنْفى/نُفِيَ", "type": "verb"},
+  {"tense1": "criminel", "tense2": "جِنائِيّ / جِنائِيّون / جِنائِيّان / جِنائِيّين / جِنائِيَّيْن", "type": "word"},
+  {"tense1": "biologique", "tense2": "حَيَويّ / حَيَويّون / حَيَويّان / حَيَويّين / حَيَويَّيْن", "type": "word"}
 ]
         };
 
