--- a/index.html
+++ b/index.html
@@ -2352,7 +2352,7 @@
   {"tense1": "faillite", "tense2": "إِفْلاس / إِفْلاسات / إِفْلاسان / إِفْلاساتٍ / إِفْلاسَيْن", "type": "word"},
   {"tense1": "jubilarse", "tense2": "تَقاعَدَ/يَتَقاعَدُ/تَقاعُد/تَقاعَدْ/يُتَقاعَدُ/تُقُوعِدَ", "type": "verb"},
   {"tense1": "procés", "tense2": "مُحاكَمَة / مُحاكَمات / مُحاكَمَتان / مُحاكَماتٍ / مُحاكَمَتَيْن", "type": "word"},
-  {"tense1": "Grave/sevère", "tense2": "بَليغ / بُلداء / بَليغان / بُلداءٍ / بَليغَيْن", "type": "word"},
+  {"tense1": "Grave/sévère", "tense2": "بَليغ / بُلَغاء / بَليغان / بُلَغاءَ / بَليغَيْن", "type": "word"},
   {"tense1": "boue", "tense2": "وَحْل / أَوْحال / وَحْلان / أَوْحالٍ / وَحْلَيْن", "type": "word"},
   {"tense1": "En hommage à", "tense2": "تَقْديرًا", "type": "sentence"},
   {"tense1": "Rejoindre", "tense2": "اِلْتَحَقَ/يَلْتَحِقُ/اِلْتِحاق/اِلْتَحِقْ/يُلْتَحَقُ/اُلْتُحِقَ", "type": "verb"},
