new arabic words

--- a/index.html
+++ b/index.html
@@ -2362,7 +2362,27 @@
   {"tense1": "En cours", "tense2": "قائِمًا", "type": "sentence"},
   {"tense1": "Nier", "tense2": "نَفى/يَنْفي/نَفْي/اِنْفِ/يُنْفى/نُفِيَ", "type": "verb"},
   {"tense1": "criminel", "tense2": "جِنائِيّ / جِنائِيّون / جِنائِيّان / جِنائِيّين / جِنائِيَّيْن", "type": "word"},
-  {"tense1": "biologique", "tense2": "حَيَويّ / حَيَويّون / حَيَويّان / حَيَويّين / حَيَويَّيْن", "type": "word"}
+  {"tense1": "biologique", "tense2": "حَيَويّ / حَيَويّون / حَيَويّان / حَيَويّين / حَيَويَّيْن", "type": "word"},
+  {"tense1": "Chapitre", "tense2": "فَصْل / فُصول / فَصْلانِ / فُصولًا / فَصْلَيْنِ", "type": "word"},
+  {"tense1": "Chauve", "tense2": "أَصْلَع / صُلْع / أَصْلَعانِ / صُلْعًا / أَصْلَعَيْنِ", "type": "word"},
+  {"tense1": "Éclipse totale", "tense2": "كُسوف كُلِّي / كُسوفات كُلِّيَّة / كُسوفانِ كُلِّيّانِ / كُسوفاتٍ كُلِّيَّةً / كُسوفَيْنِ كُلِّيَّيْنِ", "type": "word"},
+  {"tense1": "Astronomie", "tense2": "فَلَك / أَفلاك / فَلَكانِ / أَفلاكًا / فَلَكَيْنِ", "type": "word"},
+  {"tense1": "Passion", "tense2": "شَغَف / أَشْغاف / شَغَفانِ / أَشْغافًا / شَغَفَيْنِ", "type": "word"},
+  {"tense1": "Banal / Anodin", "tense2": "تافِه / تافِهون / تافِهانِ / تافِهينَ / تافِهَيْنِ", "type": "word"},
+  {"tense1": "Un appui", "tense2": "سَنَد / أَسْناد / سَنَدانِ / أَسْنادًا / سَنَدَيْنِ", "type": "word"},
+  {"tense1": "Articulation", "tense2": "مَفْصِل / مَفاصِل / مَفْصِلانِ / مَفاصِلًا / مَفْصِلَيْنِ", "type": "word"},
+  {"tense1": "Du bas / inférieur", "tense2": "سُفْلي / سُفْليّون / سُفْليّانِ / سُفْليّينَ / سُفْليَّيْنِ", "type": "word"},
+  {"tense1": "Subtil", "tense2": "طَفيف / طُفَفاء / طَفيفانِ / طُفَفاءَ / طَفيفَيْنِ", "type": "word"},
+  {"tense1": "Aplanissement", "tense2": "تَسَطُّح / تَسَطُّحات / تَسَطُّحانِ / تَسَطُّحاتٍ / تَسَطُّحَيْنِ", "type": "word"},
+  {"tense1": "Usure", "tense2": "تآكُل / تآكُلات / تآكُلانِ / تآكُلاتٍ / تآكُلَيْنِ", "type": "word"},
+  {"tense1": "Frottement", "tense2": "اِحْتِكاك / اِحْتِكاكات / اِحْتِكاكانِ / اِحْتِكاكاتٍ / اِحْتِكاكَيْنِ", "type": "word"},
+  {"tense1": "Alentour", "tense2": "كَنَف / أَكْناف / كَنَفانِ / أَكْنافًا / كَنَفَيْنِ", "type": "word"},
+  {"tense1": "Falsifier", "tense2": "زَوَّرَ / يُزَوِّرُ / تَزوير / زَوِّرْ / يُزَوَّرُ / زُوِّرَ", "type": "verb"},
+  {"tense1": "Vide", "tense2": "خالٍ / خالون / خالِيانِ / خالينَ / خالِيَيْنِ", "type": "word"},
+  {"tense1": "Dépouille", "tense2": "رُفات / — / — / — / —", "type": "word"},
+  {"tense1": "Effacer", "tense2": "مَحا / يَمْحو / مَحْو / اِمْحُ / يُمْحى / مُحيَ", "type": "verb"},
+  {"tense1": "Caractéristique", "tense2": "مَعْلَم / مَعالِم / مَعْلَمانِ / مَعالِمًا / مَعْلَمَيْنِ", "type": "word"},
+  {"tense1": "Exposer (un secret)", "tense2": "فَضَحَ / يَفْضَحُ / فَضْح / اِفْضَحْ / يُفْضَحُ / فُضِحَ", "type": "verb"}
 ]
         };
 
